--- a/basic_code.ipynb
+++ b/basic_code.ipynb
@@ -39,7 +39,7 @@
    },
    "outputs": [],
    "source": [
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV\n",
     "from sklearn.ensemble import RandomForestRegressor\n",
     "from sklearn.linear_model import LinearRegression\n",
     "from lightgbm import LGBMRegressor\n",
@@ -55,7 +55,14 @@
     "import holidays\n",
     "\n",
     "from datetime import datetime, timedelta\n",
-    "now = datetime.now()"
+    "now = datetime.now()\n",
+    "\n",
+    "import tensorflow as tf\n",
+    "from sklearn.model_selection import TimeSeriesSplit\n",
+    "from sklearn.metrics import mean_squared_error, r2_score\n",
+    "from tensorflow.keras.models import Sequential\n",
+    "from tensorflow.keras.layers import LSTM, Dense, Dropout\n",
+    "from tensorflow.keras.optimizers import Adam"
    ]
   },
   {
@@ -77,12 +84,15 @@
    "source": [
     "from pymongo import MongoClient\n",
     "\n",
-    "client = MongoClient('주소 작성')\n",
+    "# 데이터가 저장된 MongoDB의 주소\n",
+    "client = MongoClient('주소 입력')\n",
     "\n",
+    "# db를 저장하기\n",
     "db = client.crawling\n",
     "\n",
-    "collection = db['주소 작성']\n",
+    "collection = db['collection 입력']\n",
     "\n",
+    "# collection에 저장된 데이터를 데이터프레임으로 변환 및 저장\n",
     "rows = collection.find()\n",
     "history_stations = []\n",
     "for row in rows:\n",
@@ -94,87 +104,263 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "yr40leIKuBSk"
+    "id": "DFesEBBk-mqH"
    },
    "source": [
-    "#### 머신러닝 코드 RandomForestRegressor"
+    "#### 머신러닝 성능 테스트 ⭐\n",
+    "(초기 0.65)\n",
+    "- 평가 기준 r2(결정계수)\n",
+    "-  1. RandomForestRegressor 👍👍\n",
+    "-  결과: 0.7486\n",
+    "-  2. LinearRegression\n",
+    "-  결과: 0.2363\n",
+    "-  3. LGBMRegressor\n",
+    "-  결과: 0.7023\n",
+    "-  4. xgboost\n",
+    "-  결과: 0.6801"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "734bxHC3AtLK"
+   },
+   "source": [
+    "#### 모든 충전소 정보를 하나로 합치기 => df_all"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "id": "dd481307-2c2b-4e04-b773-f6befc67e004"
+    "id": "H9uRWEubBf32"
+   },
+   "outputs": [],
+   "source": [
+    "# history_stations의 각 항목을 리스트로 저장\n",
+    "dfs = []\n",
+    "\n",
+    "# 첫 번째 항목 처리\n",
+    "for i in range(len(history_stations)):\n",
+    "    df_temp = pd.DataFrame(history_stations['history'][i])  # history 항목을 DataFrame으로 변환\n",
+    "    df_temp['_id'] = history_stations['_id'][i]  # _id 값을 추가\n",
+    "    dfs.append(df_temp)  # 각 DataFrame을 리스트에 저장\n",
+    "\n",
+    "# 모든 DataFrame을 한 번에 concat\n",
+    "df_all = pd.concat(dfs, ignore_index=True)\n",
+    "\n",
+    "# 결과 확인\n",
+    "df_all.tail()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "nYhYiSPlDywX"
+   },
+   "source": [
+    "#### 임의의 날짜 변수 추가"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "V_9hVDJSD_Nx"
+   },
+   "outputs": [],
+   "source": [
+    "# 변수 생성 (주말, 월, 일, 시간, 분) #########################\n",
+    "df_all['weekday'] = df_all['time'].dt.weekday\n",
+    "df_all['month'] = df_all['time'].dt.month\n",
+    "df_all['day'] = df_all['time'].dt.day\n",
+    "df_all['hour'] = df_all['time'].dt.hour\n",
+    "df_all['minute'] = df_all['time'].dt.minute\n",
+    "\n",
+    "# 변수 생성 (공휴일)\n",
+    "kr_holidays = holidays.KR()\n",
+    "df_all['holiday'] = df_all.time.apply(lambda x: 1 if x in kr_holidays else 0)\n",
+    "\n",
+    "# ml 실행을 위해 날짜를 index로 설정하기\n",
+    "df_all.set_index(keys='time', inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "geadbbpgEIn5"
+   },
+   "outputs": [],
+   "source": [
+    "len(df_all['_id'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "H3VAJxGcEMe7"
+   },
+   "source": [
+    "#### 충전소 _id 값을 인코딩하기\n",
+    "- id 값이 고유한 카테고리인데, Label Encoding은 숫자 순서가 크기를 암묵적으로 부여하기 때문에 모델이 그 사이의 숫자 차이를 학습할 수 있다.\n",
+    "- 예를 들어, id 0과 id 1이 다를 뿐인데, 모델은 이 차이를 수치적으로 다르게 취급할 수 있다.\n",
+    "- id 값을 0, 1, 2...와 같은 연속적인 정수로 변환하면, 모델이 이 값들 간의 순서 관계나 크기 차이를 학습할 수 있게 되는데, 이는 실제로 의미가 없을 수 있다.\n",
+    "- One Hot Encoding은 충전소의 수가 2471 + α이기 때문에 변수가 너무 많이 생겨 사용할 수 없다.\n",
+    "- 그러므고 가장 유용하다고 판단되는 target_encoding을 활용한다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "DPO_Bnv_HJ6P"
+   },
+   "source": [
+    "#### target encoding 적용"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "UPq8zBoNF8Gd"
+   },
+   "outputs": [],
+   "source": [
+    "# 1. 각 '_id'에 대해 target 값(visitNum)의 평균을 구하기\n",
+    "target_means = df_all.groupby('_id')['visitNum'].mean()\n",
+    "\n",
+    "# 2. '_id' 컬럼을 해당 평균 값으로 대체하기\n",
+    "df_all['id_encoded'] = df_all['_id'].map(target_means)\n",
+    "\n",
+    "# _id 컬럼 삭제하기\n",
+    "df_all = df_all.drop('_id', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "ip6ZuwLsGUBQ"
+   },
+   "outputs": [],
+   "source": [
+    "# count 변수 저장하기\n",
+    "count = df_all.iloc[0, 0]\n",
+    "\n",
+    "# target(예측할 열) 설정하기\n",
+    "target = 'visitNum'\n",
+    "\n",
+    "# x, y 값 설정하기\n",
+    "x = df_all.drop(target, axis=1)\n",
+    "y = df_all[target]\n",
+    "\n",
+    "\n",
+    "# 데이터가 10개 이상일 경우, 기존처럼 훈련/테스트 분할\n",
+    "x_train, x_test, y_train, y_test = train_test_split(x, y, train_size=0.7, random_state=0)\n",
+    "\n",
+    "model = RandomForestRegressor(random_state=0, n_jobs=-1)\n",
+    "\n",
+    "model.fit(x_train, y_train) # 모델 학습\n",
+    "\n",
+    "y_pred = model.predict(x_test) # 모델 예측\n",
+    "y_pred = np.round(y_pred)\n",
+    "\n",
+    "print(r2_score(y_test, y_pred))  # 모델 정확도 출력\n",
+    "acc = model.score(x_test, y_test)\n",
+    "\n",
+    "# 시각화를 위함 - df 형식으로 변환\n",
+    "y_pred = pd.DataFrame(y_pred)\n",
+    "y_test = pd.DataFrame(y_test)\n",
+    "\n",
+    "# 하나의 df로 합치기\n",
+    "y_test.reset_index(inplace=True)\n",
+    "df = pd.concat([y_test, y_pred], axis=1)\n",
+    "df.columns = ['time', 'y_test', 'y_pred']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "0fnwpxFYLzKS"
+   },
+   "outputs": [],
+   "source": [
+    "# 'y_test'와 'y_pred' 열을 비교하여 정확도 평가\n",
+    "\n",
+    "# R² (R-squared) 평가\n",
+    "r2 = r2_score(df['y_test'], df['y_pred'])\n",
+    "print(f\"R-squared: {r2:.4f}\")\n",
+    "\n",
+    "# MSE (Mean Squared Error) 평가\n",
+    "mse = mean_squared_error(df['y_test'], df['y_pred'])\n",
+    "print(f\"Mean Squared Error: {mse:.4f}\")\n",
+    "\n",
+    "# RMSE (Root Mean Squared Error) 평가\n",
+    "rmse = mse ** 0.5\n",
+    "print(f\"Root Mean Squared Error: {rmse:.4f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "_XmHcamectWR"
+   },
+   "outputs": [],
+   "source": [
+    "# 시각화\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.lineplot(x='time' , y='y_test', data=df)\n",
+    "sns.lineplot(x='time' , y='y_pred', data=df)\n",
+    "plt.xticks(rotation=50)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "6mgQOf9ngaTB"
+   },
+   "outputs": [],
+   "source": [
+    "# 일정 간격으로 데이터 샘플링 (예: 2471개마다 하나씩 선택)\n",
+    "df_resampled = df.iloc[::2471, :]\n",
+    "\n",
+    "plt.figure(figsize=(8,6))\n",
+    "sns.lineplot(x='time', y='y_test', data=df_resampled, label='Actual')\n",
+    "sns.lineplot(x='time', y='y_pred', data=df_resampled, label='Predicted')\n",
+    "plt.xticks(rotation=50)\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "Nq7-iYUvShXC"
+   },
+   "source": [
+    "#### 실제 데이터로 예측 후 MongoDB에 반영하기 🌟"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "gZAzLUpoSnQr"
    },
    "outputs": [],
    "source": [
     "def run_ml(i):\n",
-    "    df_h = pd.DataFrame(history_stations['history'][i]) # history_chargers의 i번째 history 가져오기\n",
-    "\n",
-    "    # 변수 생성 (주말, 월, 일, 시간, 분) #########################\n",
-    "    df_h['weekday'] = df_h['time'].dt.weekday\n",
-    "    df_h['month'] = df_h['time'].dt.month\n",
-    "    df_h['day'] = df_h['time'].dt.day\n",
-    "    df_h['hour'] = df_h['time'].dt.hour\n",
-    "    df_h['minute'] = df_h['time'].dt.minute\n",
-    "\n",
-    "    # 변수 생성 (공휴일)\n",
-    "    kr_holidays = holidays.KR()\n",
-    "    df_h['holiday'] = df_h.time.apply(lambda x: 1 if x in kr_holidays else 0)\n",
-    "\n",
-    "    # ml 실행을 위해 날짜를 index로 설정하기\n",
-    "    df_h.set_index(keys='time', inplace=True)\n",
-    "\n",
-    "    # count 변수 저장하기\n",
-    "    count = df_h.iloc[0, 0]\n",
-    "\n",
-    "    # target(예측할 열) 설정하기\n",
-    "    target = 'visitNum'\n",
-    "\n",
-    "    # x, y 값 설정하기\n",
-    "    x = df_h.drop(target, axis=1)\n",
-    "    y = df_h[target]\n",
-    "\n",
-    "    # 데이터 샘플 수 확인 (10개 이하인 경우 예측 생략)\n",
-    "    if len(df_h) <= 10:\n",
-    "        return 0\n",
-    "    else:\n",
-    "        # 데이터가 10개 이상일 경우, 기존처럼 훈련/테스트 분할\n",
-    "        x_train, x_test, y_train, y_test = train_test_split(x, y, train_size=0.7, random_state=0)\n",
-    "\n",
-    "\n",
-    "    model = RandomForestRegressor(random_state=0)\n",
-    "\n",
-    "    model.fit(x_train, y_train) # 모델 학습\n",
-    "\n",
-    "    y_pred = model.predict(x_test) # 모델 예측\n",
-    "    y_pred = np.round(y_pred)\n",
-    "\n",
-    "    print(history_stations['_id'][i], end=' ')\n",
-    "    print(r2_score(y_test, y_pred))  # 모델 정확도 출력\n",
-    "    acc = model.score(x_test, y_test)\n",
-    "\n",
-    "    # 시각화를 위함 - df 형식으로 변환\n",
-    "    y_pred = pd.DataFrame(y_pred)\n",
-    "    y_test = pd.DataFrame(y_test)\n",
-    "\n",
-    "    # 하나의 df로 합치기\n",
-    "    y_test.reset_index(inplace=True)\n",
-    "    df = pd.concat([y_test, y_pred], axis=1)\n",
-    "    df.columns = ['time', 'y_test', 'y_pred']\n",
-    "\n",
-    "    # # 시각화\n",
-    "    # plt.figure(figsize=(8,6))\n",
-    "    # sns.lineplot(x='time' , y='y_test', data=df)\n",
-    "    # sns.lineplot(x='time' , y='y_pred', data=df)\n",
-    "    # plt.xticks(rotation=50)\n",
-    "    # plt.show()\n",
-    "\n",
     "    # 시간 단위별 예측 df 생성\n",
     "    pre_df = pd.date_range(now.date()+ timedelta(days=1) , periods=24 , freq=\"30min\") # 30분 단위로 예측 df 만들기\n",
     "\n",
     "    pre_df = pd.DataFrame(pre_df) # 데이터 프레임 형태로 변환\n",
     "    pre_df.columns=['time'] # 열 이름 변경\n",
+    "\n",
+    "    id = history_stations['_id'][i]\n",
     "\n",
     "    pre_df['count'] = count\n",
     "\n",
@@ -191,16 +377,21 @@
     "\n",
     "    pre_df.set_index(keys='time', inplace=True)\n",
     "\n",
-    "    # print(pre_df)\n",
+    "    #### target encoding을 사용하려고 하는데 각각 target을 i값 별로 다르기 때문에\n",
+    "    pre_df['id_encoded'] = target_means.iloc[i]\n",
+    "\n",
+    "\n",
     "    pre_predict = model.predict(pre_df)\n",
     "    pre_predict= np.round(pre_predict)\n",
-    "    # print(pre_predict)\n",
     "\n",
     "    pre_predict = pre_predict.tolist()\n",
     "    collection = db['demand-info']\n",
     "\n",
     "    statId = history_stations['_id'][i]\n",
     "    # 해당 statId를 가진 문서 조회\n",
+    "\n",
+    "    # print(id, statId)\n",
+    "    # print(pre_predict)\n",
     "    existing_doc = collection.find_one({\"statId\": statId })\n",
     "\n",
     "    # 문서가 존재하지 않으면 새로운 문서를 추가하고 업데이트\n",
@@ -215,106 +406,39 @@
     "        {\"$set\" : {\n",
     "            'demandInfo.hourlyVisitNum' : pre_predict\n",
     "        }\n",
-    "        })\n",
-    "\n",
-    "    return acc"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "5ad2d5b8-9f5e-4832-a9f1-a80bf790a098"
-   },
-   "source": [
-    "- 5/23에 새로 생겨난 충전소에 대해서 데이터가 없어서 모델을 돌릴 수 없음 => 시간 경과 자동 해결"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "3a988697-21ce-4246-af83-97e9ea6b4e60"
-   },
-   "source": [
-    "- blue = test, orange = predict"
+    "        })"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "id": "4b5c3b40-d5ef-46a7-9389-97c163daa6fe"
+    "id": "f7X_Wq3-Wx_J"
    },
    "outputs": [],
    "source": [
-    "arr = []\n",
     "for i in range(len(history_stations)):\n",
-    "    arr.append(run_ml(i))\n",
-    "print(np.mean(arr))"
+    "    run_ml(i)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "5H-0AGjAlaym"
+    "id": "QFXAXMFqLgpZ"
    },
    "source": [
-    "# 결정계수 r2 값이 0.7이상이면 좋은 모델, 0.3 이상이면 평범한 모델로 평가"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "NUV3QOFUe1hy"
-   },
-   "outputs": [],
-   "source": [
-    "## NaN 값이 있는지 확인\n",
-    "has_none_or_nan = any(x is None or (isinstance(x, float) and np.isnan(x)) for x in arr)\n",
-    "print(has_none_or_nan) # nan값이 있으면 True\n",
-    "\n",
-    "## NaN 값이 있는 행 확인\n",
-    "indices_with_none_or_nan = [i for i, x in enumerate(arr) if x is None or (isinstance(x, float) and np.isnan(x))]\n",
-    "print(indices_with_none_or_nan)\n",
-    "\n",
-    "## NaN 값 제거\n",
-    "filtered_list = [x for x in arr if x is not None and not (isinstance(x, float) and np.isnan(x))]\n",
-    "print(filtered_list)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "id": "oxrl72eIb1S6"
-   },
-   "outputs": [],
-   "source": [
-    "print(min(arr))\n",
-    "print(max(arr))\n",
-    "print(len(arr))\n",
-    "print(sum(filtered_list) / len(filtered_list))\n",
-    "# arr.index(0.9711363007518797)"
+    "#### 하나의 데이터프레임으로 합친 뒤 성능\n",
+    "- RandomForestRegressor : 0.9388\n",
+    "- GridSearchCV 교차 검증을 통해 최적의 하이퍼파라미터 출력한 RandomForestRegressor: (미적용)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "id": "DFesEBBk-mqH"
+    "id": "DwpmVXEnKZVX"
    },
    "source": [
-    "# 머신러닝 성능 테스트 ⭐\n",
-    "(초기 0.65)\n",
-    "## 평가 기준 r2(결정계수)\n",
-    "## 1. RandomForestRegressor 👍👍\n",
-    "## 결과: 0.7486\n",
-    "## 2. LinearRegression\n",
-    "## 결과: 0.2363\n",
-    "## 3. LGBMRegressor\n",
-    "## 결과: 0.7023\n",
-    "## 4. xgboost\n",
-    "## 결과: 0.6801"
+    "#### 계획: k-means로 유사한 특징을 가진 충전소들별로 모델 따로 학습 및 적용하기"
    ]
   }
  ],
