성능 0.94로 업그레이드

--- a/basic_code.ipynb
+++ b/basic_code.ipynb
@@ -45,10 +45,13 @@
     "from lightgbm import LGBMRegressor\n",
     "from sklearn.metrics import r2_score\n",
     "import xgboost as xgb\n",
+    "from sklearn.cluster import KMeans\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
     "import pandas as pd\n",
+    "from pandas import json_normalize\n",
     "import numpy as np\n",
     "\n",
     "from prophet import Prophet\n",
@@ -63,6 +66,62 @@
     "from tensorflow.keras.models import Sequential\n",
     "from tensorflow.keras.layers import LSTM, Dense, Dropout\n",
     "from tensorflow.keras.optimizers import Adam"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "APQNtd1t24aP"
+   },
+   "source": [
+    "#### config 파일 업로드"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "2tRlfzl33HgR"
+   },
+   "outputs": [],
+   "source": [
+    "from google.colab import files\n",
+    "\n",
+    "# 파일 업로드\n",
+    "uploaded = files.upload()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "5yqkAytk2PR9"
+   },
+   "source": [
+    "#### config.txt 파일에서 MongoDB 정보 가져오기"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "NBA9vra32Vme"
+   },
+   "outputs": [],
+   "source": [
+    "# config.txt 파일에서 MongoDB 정보 읽기\n",
+    "config = {}\n",
+    "\n",
+    "# config.txt 파일을 읽어서 정보 가져오기\n",
+    "with open('config.txt', 'r') as file:\n",
+    "    for line in file:\n",
+    "        # 줄에서 공백을 제거하고 '=' 기준으로 나누어 키-값 형태로 저장\n",
+    "        key, value = line.strip().split('=')\n",
+    "        config[key] = value\n",
+    "\n",
+    "# config.txt에서 가져온 정보로 MongoDB 연결\n",
+    "mongo_uri = config.get('MONGO_URI')\n",
+    "db_pw = int(config.get('PW'))\n",
+    "collection_name = config.get('COLLECTION_NAME')"
    ]
   },
   {
@@ -85,12 +144,12 @@
     "from pymongo import MongoClient\n",
     "\n",
     "# 데이터가 저장된 MongoDB의 주소\n",
-    "client = MongoClient('주소 입력')\n",
+    "client = MongoClient(mongo_uri, db_pw)\n",
     "\n",
     "# db를 저장하기\n",
     "db = client.crawling\n",
     "\n",
-    "collection = db['collection 입력']\n",
+    "collection = db[collection_name]\n",
     "\n",
     "# collection에 저장된 데이터를 데이터프레임으로 변환 및 저장\n",
     "rows = collection.find()\n",
@@ -99,25 +158,6 @@
     "    history_stations.append(row)\n",
     "\n",
     "history_stations = pd.DataFrame(history_stations)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "DFesEBBk-mqH"
-   },
-   "source": [
-    "#### 머신러닝 성능 테스트 ⭐\n",
-    "(초기 0.65)\n",
-    "- 평가 기준 r2(결정계수)\n",
-    "-  1. RandomForestRegressor 👍👍\n",
-    "-  결과: 0.7486\n",
-    "-  2. LinearRegression\n",
-    "-  결과: 0.2363\n",
-    "-  3. LGBMRegressor\n",
-    "-  결과: 0.7023\n",
-    "-  4. xgboost\n",
-    "-  결과: 0.6801"
    ]
   },
   {
@@ -181,6 +221,7 @@
     "kr_holidays = holidays.KR()\n",
     "df_all['holiday'] = df_all.time.apply(lambda x: 1 if x in kr_holidays else 0)\n",
     "\n",
+    "\n",
     "# ml 실행을 위해 날짜를 index로 설정하기\n",
     "df_all.set_index(keys='time', inplace=True)"
    ]
@@ -211,6 +252,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "aDSX4BHfkrXj"
+   },
+   "outputs": [],
+   "source": [
+    "df_all['organization'] = df_all['_id'].astype(str).str[:2]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "id": "DSFA-q9vnwcp"
+   },
+   "outputs": [],
+   "source": [
+    "# 1. LabelEncoder 객체 생성\n",
+    "label_encoder = LabelEncoder()\n",
+    "\n",
+    "# 2. 'organization' 컬럼을 라벨 인코딩하여 'org_encoded' 컬럼에 저장\n",
+    "df_all['org_encoded'] = label_encoder.fit_transform(df_all['organization'])\n",
+    "\n",
+    "# 3. 'organization' 컬럼 삭제하기\n",
+    "df_all = df_all.drop('organization', axis=1)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "id": "DPO_Bnv_HJ6P"
@@ -235,6 +305,26 @@
     "\n",
     "# _id 컬럼 삭제하기\n",
     "df_all = df_all.drop('_id', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "RIvPVgU8kUvk"
+   },
+   "source": [
+    "#### 근데 굳이 타겟인코딩을 해야되나?\n",
+    "- ID값으로 유의미한 값을 얻지 못하는 경우 그냥 삭제해도 좋을 듯하다\n",
+    "- 그런데 성능 차이가 많이 나서 꼭 필요한 것 같다."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "_ktzNMJmnLru"
+   },
+   "source": [
+    "#### 모델 학습 및 예측"
    ]
   },
   {
@@ -349,6 +439,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "MSOFSvyozV8a"
+   },
+   "outputs": [],
+   "source": [
+    "classes = label_encoder.classes_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "id": "gZAzLUpoSnQr"
    },
    "outputs": [],
@@ -376,6 +477,14 @@
     "    pre_df['holiday'] = pre_df.time.apply(lambda x: 1 if x in kr_holidays else 0)\n",
     "\n",
     "    pre_df.set_index(keys='time', inplace=True)\n",
+    "\n",
+    "    # #### 충전소 종류 추가\n",
+    "    # 'id'의 앞 두 글자만 추출\n",
+    "    id_prefix = id[:2]  # 예: 'AB'\n",
+    "\n",
+    "    # 'id_prefix'와 'classes_'에서 동일한 값이 있는 인덱스 찾기\n",
+    "    org_value = np.where(classes == id_prefix)[0]\n",
+    "    pre_df['org_encoded'] = org_value[0]\n",
     "\n",
     "    #### target encoding을 사용하려고 하는데 각각 target을 i값 별로 다르기 때문에\n",
     "    pre_df['id_encoded'] = target_means.iloc[i]\n",
@@ -413,6 +522,17 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "id": "4K2uqh0a5DDt"
+   },
+   "outputs": [],
+   "source": [
+    "#### 약 20분 소요됨"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
     "id": "f7X_Wq3-Wx_J"
    },
    "outputs": [],
@@ -428,17 +548,13 @@
    },
    "source": [
     "#### 하나의 데이터프레임으로 합친 뒤 성능\n",
-    "- RandomForestRegressor : 0.9388\n",
-    "- GridSearchCV 교차 검증을 통해 최적의 하이퍼파라미터 출력한 RandomForestRegressor: (미적용)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "DwpmVXEnKZVX"
-   },
-   "source": [
-    "#### 계획: k-means로 유사한 특징을 가진 충전소들별로 모델 따로 학습 및 적용하기"
+    "- RandomForestRegressor(충전소 id => 타겟인코딩 사용) : 0.9396\n",
+    "- RandomForestRegressor(충전소 종류 => 라벨인코딩 사용) : 0.6\n",
+    "- RandomForestRegressor(충전소 id, 종류 둘 다 사용) : 0.9460\n",
+    "\n",
+    "- GridSearchCV 교차 검증을 통해 최적의 하이퍼파라미터 출력한 RandomForestRegressor:\n",
+    "\n",
+    "⚠️ 항상 모델의 변수를 변경하면 모델 예측 시 사용되는 데이터프레임의 변수도 변경해주기."
    ]
   }
  ],
